Closed Bug 451686 Opened 16 years ago Closed 16 years ago

OS/2 build break in js/src

Categories

(Core :: JavaScript Engine, defect)

x86
OS/2
defect
Not set
blocker

Tracking

()

RESOLVED FIXED

People

(Reporter: mozilla, Assigned: mozilla)

References

Details

Attachments

(1 file)

We see lots of warnings and error when trying to compile JS now on OS/2 (with GCC 3.3.5, which is the newest that we have):

[... snip ...]
jsapi.cpp
In file included from X:/central/comm/mozilla/js/src/jsregexp.h:47,
                 from X:/central/comm/mozilla/js/src/jscntxt.h:57,
                 from X:/central/comm/mozilla/js/src/jsapi.cpp:59:
X:/central/comm/mozilla/js/src/jsstr.h:244: warning: `fastcall' attribute directive ignored
X:/central/comm/mozilla/js/src/jsstr.h:511: warning: `fastcall' attribute directive ignored
X:/central/comm/mozilla/js/src/jsstr.h:519: warning: `fastcall' attribute directive ignored
In file included from X:/central/comm/mozilla/js/src/jsapi.cpp:59:
X:/central/comm/mozilla/js/src/jscntxt.h:102: error: parse error before `<' token
X:/central/comm/mozilla/js/src/jscntxt.h:103: error: syntax error before `;' token
X:/central/comm/mozilla/js/src/jscntxt.h:132: error: syntax error before `*' token
X:/central/comm/mozilla/js/src/jscntxt.h:184: error: non-template used as template
X:/central/comm/mozilla/js/src/jscntxt.h:187: error: non-template used as template
[... snip ...]

The critical one seems to be the line
   extern "C++" template<typename T> class Queue;
in
   http://mxr.mozilla.org/mozilla-central/source/js/src/jscntxt.h#102
Attached patch fixSplinter Review
This fixes it for me. (Not asking for review yet, I want to see the tree opened again in case there are more changes to this code for other platforms, too.)
Assignee: general → mozilla
Status: NEW → ASSIGNED
Comment on attachment 335021 [details] [diff] [review]
fix

OK, the tree is still closed but the other platforms seem to be happy, so I can as well ask for review now to check it in after reopening.
Attachment #335021 - Flags: superreview?(shaver)
Attachment #335021 - Flags: review?(shaver)
Comment on attachment 335021 [details] [diff] [review]
fix

r=shaver
Attachment #335021 - Flags: superreview?(shaver)
Attachment #335021 - Flags: review?(shaver)
Attachment #335021 - Flags: review+
Pushed to mozilla-central, changeset - 18497:ccf551580fc7.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Depends on: 452586
Flags: in-testsuite-
Flags: in-litmus-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: