[OS/2] Bug 451686: fix build break and fastcall warnings in js/src, r=shaver